# analogorium

./: .config.yml.swp  .gitignore  CMakeLists.txt  analogorium-config.yml  analogorium.sh  analogorium.yml  config.yml  pi-analogorium.sh
src/: Config.h  main.cpp
src/primordium/: AudioDeviceSlinger.cpp  AudioDeviceSlinger.h  RingBuffer.cpp  RingBuffer.h  SignalConduit.h
src/shapery/: AutoBalance.cpp  AutoBalance.h  AutoGain.cpp  AutoGain.h  Equalizer.cpp  Equalizer.h  Shaper.h  Shapery.cpp  Shapery.h  StftShaper.cpp  StftShaper.h
src/shapery/tabled/: AutoEqualizer.cpp  AutoEqualizer.h  Equalizer.cpp  Equalizer.h
src/signal/: Essentia.cpp  Essentia.h  Signal.cpp  Signal.h
